deploy/hackathon/test2/env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2
  labels:
    app: test2
spec:
  template:
    spec:
      containers:
        - name: test2
